assets/css/style.css
/* base */
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Work+Sans:wght@100;300;400;800;900&display=swap');

html {
  font-size: 65.5%;
  overflow-x: hidden;
}

* {
  margin: 0;
  padding: 0;
  border: none;
}

body {
  background-color: #141414;
}

header {
  padding: 1.5rem;
}

h1 {
  font-family: 'Press Start 2P', 'sans-serif';
  font-size: 2rem;
  font-size: clamp(2rem, 1.4444444444444444rem + 2.7777777777777777vw, 5rem);
  text-align: center;
  color: #fff;
  text-transform: uppercase;
  -webkit-text-stroke: 1px rgb(238, 2, 2);
}

h2 {
  font-family: 'Press Start 2P', 'sans-serif';
  font-size: 1.6rem;
  font-size: clamp(1.6rem, 1.5259259259259261rem + 0.37037037037037024vw, 2rem);
  color: #1f1f1f;
}

h3 {
  font-family: 'Work Sans', 'sans-serif';
  font-weight: 600;
  font-size: 1.4rem;
  color: #1f1f1f;
  text-transform: uppercase;
}

p {
  font-family: 'Work Sans', 'sans-serif';
  font-weight: 400;
  color: #2e2e2e;
  line-height: 1.4em;
  font-size: 1.6rem;
  font-size: clamp(1.6rem, 1.5259259259259261rem + 0.37037037037037024vw, 2rem);
}

.overlay-text {
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 100;
  display: none;
  position: fixed;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: rgb(238, 2, 2);
  font-family: 'Press Start 2P', 'sans-serif';
  transition: background-color 500ms, font-size 500ms;
}

.overlay-text-small {
  font-size: .3em;
}

.overlay-text.visible {
  display: flex;
  animation: overlay-grow 500ms forwards;
}

@keyframes overlay-grow {
  from {
    background-color: rgba(0, 0, 0, 0);
    font-size: 0;
  }

  to {
    background-color: rgba(0, 0, 0, .8);
    font-size: 10em;
  }
}

/* Game area styling */
.bg-image {
  width: 90%;
  z-index: -1;
  position: absolute;
  right: 0;
  left: 0;
  top: -90%;
  bottom: 0;
  margin: auto auto;
}

.game-wrapper {
  width: 100vw;
  height: 100vh;
  position: relative;
}

.card-game-area {
  position: absolute;
  right: 0;
  left: 0;
  top: 0;
  bottom: 0;
  margin: auto auto;
  padding: 0 2rem 2rem 2rem;
  background: #fff;
  border-radius: 10px;
  border: solid #000 5px;
  width: 57%;
  height: 46%;
}

/* Cards area styling */
.computer-area h3 {
  margin-top: 1rem;
}

#computer-cards {
  display: flex;
  justify-content: center;
  height: 12rem;
}

.card-game-area #message {
  font-family: 'Press Start 2P', 'sans-serif';
  font-size: 2.5rem;
  color: rgb(238, 2, 2);
}

.message-area {
  width: 100%;
  padding-top: 1rem;
  text-align: center;
  height: 30px;
}

#player-cards {
  display: flex;
  justify-content: center;
  height: 12rem;
}

.player-area h3 {
  margin-top: 1rem;
}

/* Game buttons styling */
.game-buttons {
  position: absolute;
  right: 10px;
  bottom: -12%;
  z-index: 10;
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.right-box {
  display: flex;
}

.right-box button {
  margin-left: 16px;
}

.left-box button {
  margin-left: 16px;
}

button {
  font-family: "Work Sans", "sans-serif";
  font-weight: 800;
  text-transform: uppercase;
  color: #2e2e2e;
  line-height: 1.4em;
  font-size: 1.4rem;
  font-size: clamp(1.4rem, 1.362962962962963rem + 0.18518518518518534vw, 1.6rem);
  padding: 1rem 2rem;
  border-radius: 10px;
  outline: none;
  border: none;
  transition: all 0.2s ease 0s;
  box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 0.75);
}

button:hover {
  cursor: pointer;
  color: rgb(238, 2, 2);
}

button:active {
  color: rgb(238, 2, 2);
  box-shadow: inset 0px 0px 14px 5px rgba(0, 0, 0, 0.75);
}

.admin-buttons {
  margin: 1em;
  background-color: #00ffff;
}

/* New Game warning and info popups */

.swal2-popup {
  width: 45em !important;
  background: #000 !important;
  color: #fff !important;
}

.swal2-shown .swal2-height-auto {
  height: 100vh !important;
}

.swal2-icon.swal2-warning {
  border-color: rgb(238, 2, 2) !important;
  color: rgb(238, 2, 2) !important;
}

.swal2-title {
  color: #fff !important;
}

.swal2-html-container {
  font-size: 1.4rem !important;
  text-align: center !important;
  font-family: "Work Sans", "sans-serif" !important;
  font-weight: 400 !important;
  line-height: 1.4em !important;
}

.swal2-styled {
  font-weight: 500 !important;
}

.swal2-container.swal2-backdrop-show {
  background: rgba(0, 0, 0, .8) !important;
}

/* Instructions area */
.swal2-styled.swal2-confirm {
  background-color: rgb(238, 2, 2) !important;
  font-size: 1.4em !important;
}

/* Footer area styling */
footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  display: flex;
  justify-content: center;
}

/* smaller screens @ max 1024px media queries */

@media screen and (max-width: 1024px) {

  header {
    padding: 1rem;
    line-height: 1.4;
  }

  .bg-image {
    width: 100%;
  }

  .game-wrapper {
    width: 100%;
    height: 40vh;
  }

  .card-game-area {
    top: 45vh;
    width: 80%;
    height: 320px;
  }

  .message-area {
    height: 15px;
  }

  .card-game-area #message {
    font-size: 1.5rem;
  }

  #player-cards {
    height: 8rem;
    margin-top: 1rem;
  }

  #computer-cards {
    height: 8rem;
    margin-top: 1rem;
  }

  .left-box {
    width: 50%;
    display: flex;
  }

  .right-box {
    width: 100%;
    display: flex;
    justify-content: space-between;
  }

  .right-box button {
    margin-left: 0;
  }

  .left-box button {
    margin-left: 0;
  }

  .game-buttons {
    display: flex;
    bottom: -12%;
    right: 0;
  }

  .admin-buttons {
    margin: 2em;
  }

  .overlay-text.visible {
    display: flex;
    animation: overlay-grow 500ms forwards;
    text-align: center;
  }

  @keyframes overlay-grow {
    from {
      background-color: rgba(0, 0, 0, 0);
      font-size: 0;
    }

    to {
      background-color: rgba(0, 0, 0, .8);
      font-size: 5em;
    }
  }

}

/* smaller screens @ max 600px media queries */

@media screen and (max-width: 600px) {
  button {
    font-size: 1.2rem;
    padding: 1rem 1.5rem;
  }

  .bg-image {
    top: -50vh;
  }

  .computer-area {
    margin-top: 1rem;
    margin-bottom: 1rem;
  }
}

/* smaller screens @ max 372px media queries */

@media screen and (max-width: 372px) {
  button {
    font-size: 1rem;
  }

  .bg-image {
    top: -40vh;
  }
}

/* larger screens @ min 1400px media queries */

@media screen and (min-width: 1200px) {
  .bg-image {
    width: 100%;
  }

  .card-game-area {
    width: 850px;
    height: 450px;
  }
}

